# gonzoBot

./: README.md
gonzo_base/: CMakeLists.txt  package.xml
gonzo_base/firmware/gonzo-uC/: platformio.ini
gonzo_base/firmware/gonzo-uC/lib/base_controller/: base_controller.h  rosserial_test.h
gonzo_base/firmware/gonzo-uC/lib/batteries/: batteries.h
gonzo_base/firmware/gonzo-uC/lib/gonzo_msgs/: BatteryState.h  EncodersStamped.h  WheelCmd.h  WheelCmdStamped.h
gonzo_base/firmware/gonzo-uC/lib/motor_driver/: L298_motor_driver.h  motor_driver.h  pins.h
gonzo_base/firmware/gonzo-uC/src/: main.cpp
gonzo_base/firmware/lib/gonzo_msgs/: AngularVelocities.h  Encoders.h  EncodersStamped.h  PID.h  WheelCmd.h  WheelCmdStamped.h
gonzo_base/include/gonzo_base/: gonzo_hw_interface.h
gonzo_base/launch/: base.launch  controllers.launch
gonzo_base/src/: gonzo_base.cpp  gonzo_hardware_interface.cpp  gonzo_hw_interface.cpp
gonzo_description/: CMakeLists.txt  package.xml
gonzo_description/control/: controller.yaml
gonzo_description/launch/: controller.launch  display.launch  tf.launch
gonzo_description/meshes/: base_link.stl  battery_link.stl  caster_base.stl  caster_holder.stl  caster_wheel.stl  laser.dae  laser.stl  left_motor.stl  left_tyre.stl  left_wheel.stl  raspberry.stl  right_motor.stl  right_tyre.stl  right_wheel.stl
gonzo_description/rviz/: urdf.rviz
gonzo_description/urdf/: gonzo.gazebo  gonzo.trans  gonzo.xacro  materials.xacro
gonzo_gazebo/: CMakeLists.txt  package.xml
gonzo_gazebo/launch/: gazebo.launch
gonzo_gazebo/rviz/: visualization.rviz
gonzo_gazebo/scripts/: main.py
gonzo_gazebo/worlds/: a.world
gonzo_imu/: CMakeLists.txt  package.xml
gonzo_imu/launch/: magdwick.launch
gonzo_imu/params/: magdwick.yaml
gonzo_localization/: CMakeLists.txt  package.xml
gonzo_msgs/: CMakeLists.txt  package.xml
gonzo_msgs/msg/: AngularVelocities.msg  BatteryState.msg  Encoders.msg  EncodersStamped.msg  WheelCmd.msg  WheelCmdStamped.msg
gonzo_slam/: CMakeLists.txt  package.xml
gonzo_slam/launch/: gmapping.launch
gonzo_slam/params/: gmapping.yaml
